--- a/app/views/stories/_start_story.html.erb
+++ b/app/views/stories/_start_story.html.erb
@@ -14,8 +14,8 @@
 			
 		</li>
 		<li>
-			<span class="counter-announce">Min 10 words</span>
-		<input type="submit" class="btn btn-small btn-create-story" value="Create Story" name="commit" disabled/>
+			<span class="counter-announce">10 words min.</span>
+		<input type="submit" class="btn btn-small btn-create-story" value="Feed it!" name="commit" disabled/>
 		</li>					
 	</ul>		
   
