--- a/app/views/images/_photos.html.erb
+++ b/app/views/images/_photos.html.erb
@@ -1,4 +1,4 @@
-<h3>Please choose image and start your story</h3>
+<h3>Please choose a photo and start your story</h3>
 <div id="imageForStory" role="story-container" >
 	<ul id="portfolio-wrapper" class="row ">
 		<% @images.each do |image|%>
