--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -5,28 +5,26 @@
 		<div id="da-slider" class="da-slider">
 			<div class="da-slide">
 				<h2>FeedFiction</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-				<a href="#" class="da-link">Read more</a>
-				<div class="da-img"><img src="parallax-slider/twitter.png" alt="image01" /></div>
+				<p>Is a cool way to turn your photos into a great short stories together with friends and family.</p>
+				<!-- <a href="#" class="da-link">Read more</a> -->
+				<div class="da-img"><%= image_tag('parallax-slider/4.png') %></div>
 			</div>
 			<div class="da-slide">
 				<h2>Enjoy & Fun</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-				<a href="#" class="da-link">Read more</a>
-				<div class="da-img"><img src="img/parallax-slider/responsive.png" alt="image02" /></div>
+				<p>It's fun, short and sweet. Only 55 word a story.</p>
+				<!-- <a href="#" class="da-link">Read more</a> -->
+				<div class="da-img">
+					<%= image_tag('parallax-slider/responsive.png') %>
+				</div>
 			</div>
 			<div class="da-slide">
 				<h2>Write your story!</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-				<a href="#" class="da-link">Read more</a>
-				<div class="da-img"><img src="img/parallax-slider/html5.png" alt="image03" /></div>
+				<p>Choose a photo and start writing.</p>
+				<p>Continue stories or provides the ending for the stories that's almost done..</p>
+				<!-- <a href="#" class="da-link">Read more</a>-->
+				<div class="da-img"><%= image_tag('parallax-slider/2.png') %></div>
 			</div>
-			<div class="da-slide">
-				<h2>Let other to continue your story</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-				<a href="#" class="da-link">Read more</a>
-				<div class="da-img"><img src="img/parallax-slider/css3.png" alt="image04" /></div>
-			</div>
+			
 			<nav class="da-arrows">
 				<span class="da-arrows-prev"></span>
 				<span class="da-arrows-next"></span>
@@ -42,7 +40,7 @@
 	<h3>
 		<%= render 'static_pages/about'%>
 	</h3>
-	<p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+	<p><a class="btn btn-primary btn-large sign-in">Sign in &raquo;</a></p>
 </div>
 <!-- end: Hero Unit -->
 
