--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -18,6 +18,10 @@
                 </div>
                 <div id="imageTiles"></div>
 
+                <div class="hide" id="upload-form">
+                  <%=render template: 'images/upload'%>
+                </div>
+
                 <div class="hide" id="start-story">
                   <%= render 'stories/start_story'%>
                 </div>
