--- a/app/views/layouts/_image_provider.html.erb
+++ b/app/views/layouts/_image_provider.html.erb
@@ -13,7 +13,7 @@
                          <%end %>
                     </li>
                     <li class="span2">
-                         <a><span class="social-upload upload-cloud"></span>
+                         <a class="userFunction" data-function="displayUpload"><span class="social-upload upload-cloud"></span>
                           Upload Manually
                          </a>
                     	<%#= link_to image_tag('logos/instagram_logo.jpg'),in_wizard ? import_instagram_wizard_url : instagram_url %></li>
