--- a/app/views/stories/_start_story.html.erb
+++ b/app/views/stories/_start_story.html.erb
@@ -15,7 +15,7 @@
 		</li>
 		<li>
 			<span class="counter-announce">10 words min.</span>
-		<input type="submit" class="btn btn-small btn-create-story" value="Feed it!" name="commit" disabled/>
+		<input type="submit" class="btn btn-create-story" value="Feed it! or let other continue" name="commit" disabled/>
 		</li>					
 	</ul>		
   
