change deployment to work with sidekiq

--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -36,12 +36,12 @@
 <% end %>
 	
 <!-- start: Hero Unit - Main hero unit for a primary marketing message or call to action -->
-<div class="hero-unit">
+<!-- <div class="hero-unit">
 	<h3>
-		<%= render 'static_pages/about'%>
+		<%#= render 'static_pages/about'%>
 	</h3>
 	<p><a class="btn btn-primary btn-large sign-in">Sign in &raquo;</a></p>
-</div>
+</div> -->
 <!-- end: Hero Unit -->
 
 <hr>
