--- a/app/views/layouts/_image_provider.html.erb
+++ b/app/views/layouts/_image_provider.html.erb
@@ -1,21 +1,21 @@
-				<ul class="row logo-images show-grid">
+				<div class="logo-images show-grid">
                   
-                    <li class="span2">
-                         <%= link_to(facebook_url, remote: true , before: "$('#StartStoryModal .preloader').toggle()" , :complete => "$('#StartStoryModal .preloader').toggle()") do %>
+                    <div class="first span2">
+                         <%= link_to(facebook_url, remote: true , class: 'userFunction', 'data-function' => "setPreloader#.modal .preloader") do %>
                               <span class="social-upload upload-facebook"></span>Facebook
                          <%end%>
                     	<%#= link_to image_tag('logos/facebook_logo.jpg'),in_wizard ? import_facebook_wizard_url : facebook_path %>
-                    </li>
-                    <li class="span2">
-                    	<%= link_to(instagram_url, remote: true) do %>
+                    </div>
+                    <div class="span2">
+                    	<%= link_to(instagram_url, remote: true ,class: 'userFunction', 'data-function' => "setPreloader#.modal .preloader") do %>
                          <span class="social-upload upload-instagram"></span>Instagram
                     	<%#= link_to image_tag('logos/upload_image.jpg'),'#UploadModal' ,data: { function: 'displayUpload' , dismiss: 'modal'}, class: 'userFunction' %>
                          <%end %>
-                    </li>
-                    <li class="span2">
+                    </div>
+                    <div class="span2">
                          <a class="userFunction" data-function="displayUpload"><span class="social-upload upload-cloud"></span>
-                          Upload Manually
+                          Upload a Photo
                          </a>
-                    	<%#= link_to image_tag('logos/instagram_logo.jpg'),in_wizard ? import_instagram_wizard_url : instagram_url %></li>
+                    	<%#= link_to image_tag('logos/instagram_logo.jpg'),in_wizard ? import_instagram_wizard_url : instagram_url %></div>
                  
-                    </ul>
+                    </div>
