--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
      <!--start: Logo -->
       <div class="logo span3">
-        <i class="mini-white mini-ico-bookmark circle-color-full"></i>
+        <!-- <i class="mini-white mini-ico-bookmark circle-color-full"></i> -->
 <%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand" %>
 
         <!-- <a class="brand" href="#">Feed<span>fiction</span></a> -->
