--- a/app/views/register/start.html.erb
+++ b/app/views/register/start.html.erb
@@ -1,9 +1,19 @@
-<section>
-    <p>Hi <%= current_user.name %>,</p>
-	<p>You can start your story by choosing your photo:</p>
+<%= render 'layouts/feed_nav'%>
+<%= render 'feeds/feed' %>
+<div class="modal  fade in" id="registration_wizard">
 	
-	<%= render 'layouts/image_provider' %>
-</section>
-
-
-
+	<div class="modal-body">
+		<h3>Hi <%= current_user.name %></h3>
+		<p>
+			<div>You’re ready to feed the fiction.</div>
+			<div>Starting a story is easy.</div>
+			Two steps and you’re done.
+			<ol>
+				<li>1. Upload a photo</li> 
+				<li>2. Start writing. You may write one word or more.</li>
+			</ol>	
+			
+			That’s it. Click “Feed it” and let others continue your story. 
+			Every story is 55 words long. It’s short and sweet.</p>
+	</div>
+</div>
