fixing deloy script and sidekiq

--- a/app/views/register/start.html.erb
+++ b/app/views/register/start.html.erb
@@ -8,12 +8,18 @@
 			<div>You’re ready to feed the fiction.</div>
 			<div>Starting a story is easy.</div>
 			Two steps and you’re done.
-			<ol>
+			<!-- <ol>
 				<li>1. Upload a photo</li> 
 				<li>2. Start writing. You may write one word or more.</li>
 			</ol>	
 			
 			That’s it. Click “Feed it” and let others continue your story. 
-			Every story is 55 words long. It’s short and sweet.</p>
+			Every story is 55 words long. It’s short and sweet. -->
+		</p>
+
+	</div>
+	<div class="modal-footer hide">
+		<input type="button" value="Start a Story"/>
+		<%= lin
 	</div>
 </div>
