fixing deployment and ui

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -887,6 +887,22 @@ ul.commentlist {
 	}
 }
 
+/* Registration modal wizrd */
+#registration_wizard {
+	width:auto;
+	min-width: 555px;
+	&.modal {
+		overflow: visible !important;
+	}
+	#StartStoryModal {
+		.close-modal, .modal-footer {
+			display: none;
+		}
+
+	}
+	
+}
+
 /* Start a stry wizard */
 #StartStoryModal {
 	h2,h3 {
