--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -10,13 +10,13 @@
 
 
 
-h1, h2, h3, h4, h5, h6 {
+/*h1, h2, h3, h4, h5, h6 {
 	font-family: "Droid Sans" !important;
 	font-weight: normal !important;
 	color: #666;
 	margin: 0;
 	padding: 0;
-}
+}*/
 
 h1 {
   font-size: 36px;
