--- a/app/views/stories/_start_story.html.erb
+++ b/app/views/stories/_start_story.html.erb
@@ -1,4 +1,4 @@
-<%= form_for Story.new do |f| %>
+<%= form_for Story.new, remote: true do |f| %>
   
 	  <ul class="start-story-form">
 		<!-- <li><h3></h3></li> -->
