--- a/app/views/stories/create.js.erb
+++ b/app/views/stories/create.js.erb
@@ -1,3 +1,3 @@
-$('#registration-done h3').html("Well done #{current_user}");
+$('#registration-done h3').html("Well done <%=current_user.name%>");
 feedfiction.actions.endRegistrationModal();
 
