--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -362,7 +362,7 @@ footer {
 	padding:0 1px 1px;
 	position:relative;
 	right:-1px;
-	display: inline-block;
+	
 }
 
 /* Logos */
@@ -646,7 +646,7 @@ footer {
 		/*border: 1px solid #fcfcfc;
 		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.25);
     box-shadow: 0px 1px 1px rgba(0,0,0,.25);*/
-    overflow: hidden;
+    /*overflow: hidden;*/
     background-color: #fff;
 
 		.picture {
@@ -723,6 +723,7 @@ footer {
 
 		.post-meta {
 			margin-top: 0;
+			position: relative;
 		}
 
 
@@ -851,7 +852,9 @@ ul.commentlist {
 		background: #fff;
 		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
 		   -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
-			    box-shadow: 0px 1px 1px rgba(0,0,0,.35);	
+			    box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+		width: 780px;	
+		margin:	0 auto;
 		.story-wrapper {
 			padding: 10px 10px 0px 10px;
 		}
@@ -894,6 +897,9 @@ ul.commentlist {
 	&.modal {
 		overflow: visible !important;
 	}
+	.start-registration, #registration-done {
+		padding:0 15px;
+	}
 	#StartStoryModal {
 		.close-modal, .modal-footer {
 			display: none;
@@ -901,6 +907,31 @@ ul.commentlist {
 
 	}
 	
+}
+
+#registration-continue-story {
+	h3 {
+		font-size: 17px;
+	}
+	width: 112%;
+	font-size: 16px;
+	line-height: 26px;
+	.modal-footer {
+		width: 92%;
+		.next-registration-wizad-btns {
+			font-size: 14px;
+			line-height: 14px;
+			float: right;
+		}
+	}
+
+}
+.exposure-tile {
+	overflow: visible;
+	z-index: 999999;
+	#story-container .story-item {
+		overflow: visible;
+	}
 }
 
 /* Start a stry wizard */
@@ -1024,7 +1055,7 @@ ul.commentlist {
 	}
 
 	&.behaviour-story-form {
-		width: 383px;
+		width: 397px;
 		.modal-header {
 			/*position: absolute;*/
 			/*border: 0;*/
