--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -18,6 +18,10 @@
 	padding: 0;
 }*/
 
+h1, h2, h3, h4, h5, h6 {
+	font-weight: normal !important;
+}
+
 h1 {
   font-size: 36px;
   line-height: 40px;
